Refactor LoadTestClient to Java 11